# Simulator

./: .gitignore
simulator/: Cargo.toml
simulator/assets/meshes/: ability_1.glb  field_1.glb  flower_blue_1.glb  flower_blue_2.glb  flower_blue_3.glb  flower_red_1.glb  flower_red_2.glb  flower_red_3.glb  flower_white_1.glb  flower_white_2.glb  flower_white_3.glb  hive_hive.glb  hive_wall.glb  normal_bee.glb  player.glb  shovel.glb  spawn.glb  world.glb
simulator/src/: main.rs  systems.rs
simulator/src/game/: mod.rs
simulator/src/game/abilities/: components.rs  mod.rs  systems.rs
simulator/src/game/bee/: components.rs  mod.rs  systems.rs
simulator/src/game/flower/: components.rs  mod.rs  systems.rs
simulator/src/game/player/: components.rs  mod.rs  systems.rs
simulator/src/game/player/inventory/: components.rs  mod.rs  systems.rs
simulator/src/game/player/ui/: components.rs  mod.rs  systems.rs
simulator/src/game/world/: components.rs  mod.rs
simulator/src/game/world/planet_01/: mod.rs  systems.rs
