[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_third_person_camera = "0.1.7"
bevy_rapier3d = "0.23.0"
bevy_time = "0.12.1"
bevy-inspector-egui = "0.21.0"
rand = "0.8.5"
